--- a/templates/tpl.content.html
+++ b/templates/tpl.content.html
@@ -1,6 +1,6 @@
 <!--
-Dashboard ILIAS plugin for the assistance system developed as part of the VerDatAs project
-Copyright (C) 2022-2024 TU Dresden (Tommy Kubica)
+Dashboard for the assistance system developed as part of the VerDatAs project
+Copyright (C) 2022-2024 TU Dresden (Max Schaible, Niklas Harbig, Tommy Kubica)
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -15,7 +15,7 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-Please find the licenses of the third-party libraries used here: ./vendor.LICENSE.txt
+Please find the licenses of the third-party libraries used here: ./THIRD-PARTY-tud-dashboard.md
 -->
 <!DOCTYPE html>
 <html lang="en">
