Update list of third-party-libraries; Update list of authors of the dashboard; Update to latest version of the dashboard;

--- a/templates/tpl.content.html
+++ b/templates/tpl.content.html
@@ -1,6 +1,6 @@
 <!--
 Dashboard for the assistance system developed as part of the VerDatAs project
-Copyright (C) 2022-2024 TU Dresden (Max Schaible, Niklas Harbig, Tommy Kubica)
+Copyright (C) 2022-2024 TU Dresden (Max Schaible, Niklas Harbig, Sebastian Kucharski, Tommy Kubica)
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
